force-app/main/default/objects/iManageSettings__c/iManageSettings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>iManageSettings</label>
</CustomObject>