force-app/main/default/objects/iManageSettings__c/fields/ClientField__c.field-meta.xml
<CustomField>
    <fullName>ClientField__c</fullName>
    <defaultValue>&quot;custom1&quot;</defaultValue>
    <label>iManage Client Field</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>