force-app/main/default/objects/iManageSettings__c/fields/Customer_Id__c.field-meta.xml
<CustomField>
    <fullName>Customer_Id__c</fullName>
    <label>iManage Cusgtomet Id</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>