force-app/main/default/objects/iManageSettings__c/fields/Enable_CSV_Export__c.field-meta.xml
<CustomField>
    <fullName>Enable_CSV_Export__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enable CSV export fields and CSV export system</description>
    <label>Enable CSV Export</label>
    <type>Checkbox</type>
</CustomField>