force-app/main/default/objects/iManageSettings__c/fields/iManage_Create_Ws_Enabled__c.field-meta.xml
<CustomField>
    <fullName>iManage_Create_Ws_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>iManage Create Workspace Enabled</label>
    <type>Checkbox</type>
</CustomField>