force-app/main/default/objects/iManageSettings__c/fields/iManage_Default_Folder_Class__c.field-meta.xml
<CustomField>
	<fullName>iManage_Default_Folder_Class__c</fullName>
	<description>iManage Default Folder Class</description>
	<label>iManage Default Folder Class</label>
	<length>255</length>
	<type>Text</type>
</CustomField>