force-app/main/default/objects/iManageSettings__c/fields/iManage_Default_Folder_Id__c.field-meta.xml
<CustomField>
    <fullName>iManage_Default_Folder_Id__c</fullName>
    <description
  >iManage default folder id for saving via iManage File Saver</description>
    <label>iManage Default Folder Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>