force-app/main/default/objects/iManageSettings__c/fields/iManage_Libraries__c.field-meta.xml
<CustomField>
    <fullName>iManage_Libraries__c</fullName>
    <description>List of possible iManage Libraries</description>
    <label>iManage_Libraries</label>
    <length>255</length>
    <type>Text</type>
</CustomField>