force-app/main/default/objects/iManageSettings__c/fields/iManage_UseOnlyCustom2__c.field-meta.xml
<CustomField>
    <fullName>iManage_UseOnlyCustom2__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Don’t look for Custom1</label>
    <type>Checkbox</type>
</CustomField>