force-app/main/default/objects/iManageSettings__c/fields/iManage_Ws_Auto_Create__c.field-meta.xml
<CustomField>
    <fullName>iManage_Ws_Auto_Create__c</fullName>
    <defaultValue>false</defaultValue>
    <label>iManage Auto-create Workspaces</label>
    <type>Checkbox</type>
</CustomField>