force-app/main/default/objects/iManageSettings__c/fields/iManage_Ws_Folder_Template_Id__c.field-meta.xml
<CustomField>
    <fullName>iManage_Ws_Folder_Template_Id__c</fullName>
    <description>iManage Workspace Folder Template Id</description>
    <inlineHelpText
  >iManage default folder template id for creating workspace</inlineHelpText>
    <label>iManage Workspace Folder Template Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>