force-app/main/default/objects/iManageSettings__c/fields/iManage_Ws_Name_Pattern__c.field-meta.xml
<CustomField>
    <fullName>iManage_Ws_Name_Pattern__c</fullName>
    <label>iManage Workspace Name Pattern</label>
    <length>255</length>
    <type>Text</type>
</CustomField>