force-app/main/default/objects/iManageSettings__c/fields/iManage_Ws_Owner__c.field-meta.xml
<CustomField>
    <fullName>iManage_Ws_Owner__c</fullName>
    <label>iManage Workspace Owner</label>
    <length>64</length>
    <type>Text</type>
</CustomField>