force-app/main/default/objects/iManageSettings__c/fields/Mapping_ClientNameField__c.field-meta.xml
<CustomField>
    <fullName>Mapping_ClientNameField__c</fullName>
    <label>Mapping ClientNameField</label>
    <length>255</length>
    <type>Text</type>
</CustomField>