force-app/main/default/objects/iManageSettings__c/fields/Mapping_EntityClientIdObjectField__c.field-meta.xml
<CustomField>
    <fullName>Mapping_EntityClientIdObjectField__c</fullName>
    <label>Salesforce Client Id Object</label>
    <length>255</length>
    <type>Text</type>
</CustomField>