force-app/main/default/objects/iManageSettings__c/fields/Mapping_EntityMatterIdObjectField__c.field-meta.xml
<CustomField>
    <fullName>Mapping_EntityMatterIdObjectField__c</fullName>
    <label>Salesforce Matter Id Object</label>
    <length>255</length>
    <type>Text</type>
</CustomField>