force-app/main/default/objects/iManageSettings__c/fields/Mapping_EntityType__c.field-meta.xml
<CustomField>
    <fullName>Mapping_EntityType__c</fullName>
    <defaultValue>(&quot;litify_pm__Matter__c&quot;)</defaultValue>
    <description>Deprecated since 2.81. Runtime mapping configuration is stored in IManage_Mapping_Configuration__c. Retained temporarily for migration and manual rollback or support reference.</description>
    <label>Salesforce Entity Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>