force-app/main/default/objects/iManageSettings__c/fields/Mapping_MatterNameField__c.field-meta.xml
<CustomField>
    <fullName>Mapping_MatterNameField__c</fullName>
    <description>Deprecated since 2.81. Runtime mapping configuration is stored in IManage_Mapping_Configuration__c. Retained temporarily for migration and manual rollback or support reference.</description>
    <label>Salesforce Matter Name Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>