force-app/main/default/objects/iManageSettings__c/fields/Mapping_WSTemplateField__c.field-meta.xml
<CustomField>
    <fullName>Mapping_WSTemplateField__c</fullName>
    <label>iManage Workspace Template Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>