force-app/main/default/objects/iManageSettings__c/fields/MatterField__c.field-meta.xml
<CustomField>
    <fullName>MatterField__c</fullName>
    <defaultValue>&quot;custom2&quot;</defaultValue>
    <label>iManage Matter Field</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>