force-app/main/default/objects/iManageSettings__c/fields/Url__c.field-meta.xml
<CustomField>
    <fullName>Url__c</fullName>
    <label>Url</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>