force-app/main/default/objects/iManageSettings__c/fields/Verbose_Logging__c.field-meta.xml
<CustomField>
    <fullName>Verbose_Logging__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enable verbose logging for the iManage iFrame system</description>
    <label>Verbose Logging</label>
    <type>Checkbox</type>
</CustomField>